Fix penalty type extraction and yardage-based holding classification (Fixes #115) (#116)
* feat: Consolidate CFBStats - use pbp-parser's cfbstats module

- Replace cfbstats_scraper.py with pbp_parser.cfbstats import
- Call generate_context_badges() for each team individually
- Simplify rankings structure to use badge text directly
- Delete duplicate cfbstats_scraper.py file
- Delete duplicate cfbstats_cache/ directory (use shared ~/.pbp-parser/cache)
- Cache is now shared between pbp-parser and pbp-analysis

Note: UI in index.html may need updates to handle simplified badge structure

* Fix #60: Exclude punts and field goals from 4th down attempts calculation

- Enhanced compute_fourth_down_stats() to more comprehensively exclude punts and FGs
- Added explicit checks for 'PUNT', 'FIELD GOAL', 'FG', and other special teams plays
- Improved filtering logic to only count actual 'go for it' rush/pass attempts
- Added documentation explaining the fix

This resolves the issue where Georgia vs ALA showed 2 attempts when cfbstats
showed 1. The parser was incorrectly counting punts and field goals as 4th
down conversion attempts.

* feat: use pbp-parser fourth_down module

- Import compute_fourth_down_stats from pbp_parser.fourth_down
- Remove local implementation (moved to pbp-parser)
- Update call site to work with FourthDownStats dataclass
- Requires victorres11/pbp-parser#64 to be merged

Closes #60

* Fix penalty type extraction and implement yardage-based holding classification

- Fix broken regex in parse_penalty_details() that left full play descriptions
  in the penalty type field. Now directly uses the pattern name.
- Implement yardage-based holding classification:
  * 10 yards → 'Offensive Holding (10y)'
  * 5 yards with AFD → 'Defensive Holding (5y, AFD)'
  * 5 yards without AFD → 'Defensive Holding (5y)'
- Remove generic 'Holding' from typeBuckets arrays in index.html

Fixes #115

* fix: resolve PR-116 ranking schema and holding classification mismatches

------

--- a/index.html
+++ b/index.html
@@ -1003,11 +1003,40 @@ function getRanking(team, key) {
     return rankings[key] || null;
 }
 
+function conferenceTeamCount(conference) {
+    const conf = (conference || '').trim().toUpperCase();
+    const byConference = {
+        'ACC': 17,
+        'BIG 10': 18,
+        'BIG TEN': 18,
+        'BIG 12': 16,
+        'SEC': 16,
+    };
+    return byConference[conf] || null;
+}
+
+function normalizeRankingEntry(entry) {
+    if (!entry) return null;
+    if (entry.rank) return entry;
+    if (typeof entry.text !== 'string') return entry;
+    const m = entry.text.match(/Ranks?\s+(\d+)\s+in\s+(.+?)\s+in\s+(.+?)\s*\(([^)]+)\)/i);
+    if (!m) return entry;
+    const conference = m[2].trim();
+    return {
+        ...entry,
+        rank: Number(m[1]),
+        conference,
+        label: m[3].trim(),
+        value: m[4].trim(),
+        total: conferenceTeamCount(conference),
+    };
+}
+
 function buildStatBadge(team, key) {
-    const entry = getRanking(team, key);
+    const entry = normalizeRankingEntry(getRanking(team, key));
     if (!entry) return '';
     const meta = RANKING_META[key] || {};
-    return renderStatBadge(entry.rank, entry.total, !!meta.reverse, entry.conference);
+    return renderStatBadge(entry.rank, entry.total || conferenceTeamCount(entry.conference), !!meta.reverse, entry.conference);
 }
 
 function buildFirstAvailableStatBadge(team, keys=[]) {
@@ -1021,11 +1050,13 @@ function buildFirstAvailableStatBadge(team, keys=[]) {
 }
 
 function formatRankingLabel(entry) {
-    if (!entry) return '';
-    const value = entry.value ? ` (${entry.value})` : '';
-    const label = entry.label ? ` in ${entry.label}` : '';
-    const conf = entry.conference ? ` in ${entry.conference}` : '';
-    return `${ordinal(entry.rank)}${conf}${label}${value}`;
+    const parsed = normalizeRankingEntry(entry);
+    if (!parsed) return '';
+    if (!parsed.rank && parsed.text) return parsed.text;
+    const value = parsed.value ? ` (${parsed.value})` : '';
+    const label = parsed.label ? ` in ${parsed.label}` : '';
+    const conf = parsed.conference ? ` in ${parsed.conference}` : '';
+    return `${ordinal(parsed.rank)}${conf}${label}${value}`;
 }
 
 function statCard(label, value, sub, teamClass, quality, badge='') {
@@ -1208,14 +1239,17 @@ function parseScheduleDate(dateStr) {
 
 const HOLDING_OFF_LABEL = 'Offensive Holding (10y)';
 const HOLDING_DEF_LABEL = 'Defensive Holding (5y, AFD)';
-const PENALTY_TYPE_BUCKETS_TOP = [HOLDING_OFF_LABEL, HOLDING_DEF_LABEL, 'Holding', 'Pass Interference', 'False Start', 'Offsides/Offside', 'Illegal Formation', 'Unsportsmanlike', 'Other'];
+const HOLDING_DEF_NO_AFD_LABEL = 'Defensive Holding (5y)';
+const PENALTY_TYPE_BUCKETS_TOP = [HOLDING_OFF_LABEL, HOLDING_DEF_LABEL, HOLDING_DEF_NO_AFD_LABEL, 'Pass Interference', 'False Start', 'Offsides/Offside', 'Illegal Formation', 'Unsportsmanlike', 'Other'];
 
 function classifyPenalty(p) {
     const text = `${p.type || ''} ${p.description || ''}`.toLowerCase();
     if (text.includes('holding')) {
-        if (p.offense_or_defense === 'offense') return HOLDING_OFF_LABEL;
+        const typeText = (p.type || '').toLowerCase();
+        if (typeText.includes('defensive holding')) return typeText.includes('afd') ? HOLDING_DEF_LABEL : HOLDING_DEF_NO_AFD_LABEL;
+        if (typeText.includes('offensive holding')) return HOLDING_OFF_LABEL;
         if (p.offense_or_defense === 'defense') return HOLDING_DEF_LABEL;
-        return 'Holding';
+        return HOLDING_OFF_LABEL;
     }
     if (text.includes('pass interference') || /\b(dpi|opi)\b/.test(text)) return 'Pass Interference';
     if (text.includes('false start')) return 'False Start';
@@ -2649,7 +2683,7 @@ function initPenaltyCharts() {
     const ga = DATA.teams.georgia, aa = DATA.teams.asu;
     const gaDetails = getPenaltyDetails(gf).filter(p => p.team === ga.abbr);
     const aaDetails = getPenaltyDetails(af).filter(p => p.team === aa.abbr);
-    const typeBuckets = [HOLDING_OFF_LABEL, HOLDING_DEF_LABEL, 'Holding', 'Pass Interference', 'False Start', 'Offsides/Offside', 'Illegal Formation', 'Unsportsmanlike', 'Other'];
+    const typeBuckets = [HOLDING_OFF_LABEL, HOLDING_DEF_LABEL, HOLDING_DEF_NO_AFD_LABEL, 'Pass Interference', 'False Start', 'Offsides/Offside', 'Illegal Formation', 'Unsportsmanlike', 'Other'];
     const countByType = (details) => details.reduce((acc, p) => {
         const bucket = classifyPenalty(p);
         acc[bucket] = (acc[bucket] || 0) + 1;
